CSS: fix wide gaps after nested lists
Nested lists were looking pretty bad, so I made the big margin-bottom after a
list element only apply if it was the outside list.

--- a/source/files/stylesheets/style.css
+++ b/source/files/stylesheets/style.css
@@ -306,7 +306,8 @@ a.gateway:hover {
   text-decoration: none;
 }
 
-ul, ol, dl {
+/* We want this to apply to lists standing by themselves, but not to lists within lists, because that just makes a mess. */
+p > ul, ol, dl {
   margin-bottom: 1.5em;
 }
 
